# elfcharge

./: .gitignore  README.md  README_JP.md  SPEC.md  pyproject.toml
elfcharge/: __init__.py  analysis.py  core.py  integrate.py  io.py  partition.py  structure.py  visualize.py
examples/: example_elfcharge.ipynb  structure_with_electrides.cif
