[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfcharge"
version = "0.2.0"
description = "Bader analysis based on ELF for electride electron counting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryoji Kanno"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["electride", "ELF", "Bader", "VASP", "DFT", "electron localization"]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pymatgen>=2022.0.0",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/elfcharge"
Documentation = "https://github.com/yourusername/elfcharge#readme"
Repository = "https://github.com/yourusername/elfcharge"
Issues = "https://github.com/yourusername/elfcharge/issues"

[tool.setuptools.packages.find]
include = ["elfcharge*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
